# pico-w-freertos

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  header.html
.github/workflows/: cmake.yml  codeql.yml
include/: FreeRTOSConfig.h  pico_freertos.h  pico_smp.h
src/: CMakeLists.txt  main.c  pico_freertos.c  pico_smp.c
